2008-09-09  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/37387
	* tree-ssa-ifcombine.c (ifcombine_iforif): Convert the name
	and bits to a common type.

	* gcc.c-torture/compile/pr37387.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@140142 138bc75d-0d04-0410-961f-82ee72b054a4